syntax = "proto3";

package Kaleido.Grpc.Categories;

import "Models/category-common.proto";

message GetAllCategoriesRequest {
}

message GetAllCategoriesResponse {
    repeated Category categories = 1;
}

